--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Test</title>
+    <title>Morphlines Tester</title>
     <link rel="stylesheet" type="text/css" href="/css/style.css">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
@@ -16,25 +16,60 @@
   </head>
   <body>
     <div class="container">
-      <fieldset>
+
+      <div class='input'>
         <form action="/" method="post">
-          <h1> Morphlines Configuration </h1>
-          <textarea rows="4" cols="50" id="config" name="config" class="editor"  placeholder="Enter ML Config..."><% if(typeof config!='undefined' ? config : ''){ %><%= config %><% } %></textarea>
-          <br/><br/>
-          <h1> Morphlines Test Data </h1>
-          <textarea rows="4" cols="50" name="data" id="data" class="editor2" placeholder="Enter Test Data..."><% if(typeof data!='undefined' ? data : ''){ %><%= data %><% } %></textarea>
-          <br/>
-          <input type="submit" class="ghost-button" value="Test Morphlines">
+
+          <div class='action'>
+            <input type="submit" class="ghost-button" value="Test Morphlines">
+          </div>
+      
+          <div class="input-panels"> 
+            <div> 
+              <h1> Morphlines Configuration </h1>
+              <textarea 
+                id="config" 
+                name="config" 
+                class="editor"  
+                placeholder="Enter ML Config...">
+                <% if(typeof config!='undefined' ? config : ''){ %><%= config %><% } %></textarea>
+            </div>
+            <div> 
+              <h1> Morphlines Test Data </h1>
+              <textarea 
+                name="data" 
+                id="data" 
+                class="editor2" 
+                placeholder="Enter Test Data...">
+                <% if(typeof data!='undefined' ? data : ''){ %><%= data %><% } %></textarea>
+            </div>
+          </div>
+
         </form>
-          <h1> Results Stdout: </h1>
-          <p rows="4" cols="50" style="font-size: 8" ><% if(typeof ml_return!='undefined' ? ml_return : ''){ %><%= ml_return %><% } %></p>
-          <textarea id="result" rows="4" cols="50" class="result" placeholder="Results go here..."><% if(typeof ml_return!='undefined' ? ml_return : ''){ %><%= ml_return_formatted %><% } %></textarea>
+      </div>
+
+      <div class='output'> 
+
+        <!-- Tab links -->
+
+
+        <h1> Results Stdout: </h1>
+          
+        <p>
+          <% if(typeof ml_return!='undefined' ? ml_return : ''){ %><%= ml_return %><% } %>
+        </p>
+        <textarea 
+          id="result" 
+          class="result" 
+          placeholder="Results go here...">
+          <% if(typeof ml_return_formatted!='undefined' ? ml_return_formatted : ''){ %><%= ml_return_formatted %><% } %>
+        </textarea>
 
         <% if(typeof error!='undefined' ? error : ''){ %>
           <h3> Results Stderr: </h1>
           <p><%= error %></p>
         <% } %>
-      </fieldset>
+      </div>
     </div>
   </body>
 </html>
