Better json handling

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -31,13 +31,13 @@ form {
 }
 .input-panels {
   width: 100%;
-  display:flex;
   height:calc(100% - 50px) !important;
   align-content:stretch;
 }
 .input-panels > div {
-  flex:0 0 50%;
   margin:1px;
+  width: 49%;
+  float: left;
   height:100%;
 }
 .CodeMirror {
@@ -57,7 +57,7 @@ h1 {
 }
 
 .output {
-  border:1px solid red;
+  font-size: 10px;
 }
 /*
 fieldset {
