--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,14 +5,20 @@
     <title>Morphlines Tester</title>
     <link rel="stylesheet" type="text/css" href="/css/style.css">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="/codemirror/lib/codemirror.js"></script>
     <link rel="stylesheet" href="/codemirror/lib/codemirror.css">
     <link rel="stylesheet" href="/codemirror/theme/monokai.css">
+    <link rel="stylesheet" href="/codemirror/addon/fold/foldgutter.css">
     <script src="/js/syntax.js"></script>
     <script src="codemirror/addon/edit/matchbrackets.js"></script>
+    <script src="codemirror/addon/fold/brace-fold.js"></script>
+    <script src="codemirror/addon/fold/indent-fold.js"></script>
+    <script src="codemirror/addon/fold/foldcode.js"></script>
+    <script src="codemirror/addon/fold/foldgutter.js"></script>
     <script src="codemirror/mode/javascript/javascript.js"></script>
     <script src="codemirror/mode/yaml/yaml.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
   </head>
   <body>
     <div class="container">
@@ -45,21 +51,14 @@
 
         </form>
       </div>
-
       <div class='output'>
 
         <!-- Tab links -->
-
-
         <h1> Results Stdout: </h1>
-
         <p>
           <% if(typeof ml_return!='undefined' ? ml_return : ''){ %><%= ml_return %><% } %>
         </p>
-        <textarea
-          id="result"
-          class="result"
-          placeholder="Results go here..."><% if(typeof ml_return_formatted!='undefined' ? ml_return_formatted : ''){ %><%= ml_return_formatted %><% } %>
+        <textarea id="result" class="result" placeholder="Results go here..."><% if(typeof ml_return_formatted!='undefined' ? ml_return_formatted : ''){ %><%= ml_return_formatted %><% } %>
         </textarea>
 
         <% if(typeof error!='undefined' ? error : ''){ %>
