--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,12 +10,22 @@
     <link rel="stylesheet" href="/codemirror/lib/codemirror.css">
     <link rel="stylesheet" href="/codemirror/theme/monokai.css">
     <link rel="stylesheet" href="/codemirror/addon/fold/foldgutter.css">
+    <link rel="stylesheet" href="/codemirror/addon/dialog/dialog.css">
+    <link rel="stylesheet" href="/codemirror/addon/search/matchesonscrollbar.css">
     <script src="/js/syntax.js"></script>
     <script src="codemirror/addon/edit/matchbrackets.js"></script>
     <script src="codemirror/addon/fold/brace-fold.js"></script>
     <script src="codemirror/addon/fold/indent-fold.js"></script>
     <script src="codemirror/addon/fold/foldcode.js"></script>
     <script src="codemirror/addon/fold/foldgutter.js"></script>
+    <script src="codemirror/addon/search/search.js"></script>
+    <script src="codemirror/addon/search/match-highlighter.js"></script>
+    <script src="codemirror/addon/search/searchcursor.js"></script>
+    <script src="codemirror/addon/search/jump-to-line.js"></script>
+    <script src="codemirror/addon/search/matchesonscrollbar.js"></script>
+    <script src="codemirror/addon/scroll/simplescrollbars.js"></script>
+    <script src="codemirror/addon/scroll/annotatescrollbar.js"></script>
+    <script src="codemirror/addon/dialog/dialog.js"></script>
     <script src="codemirror/mode/javascript/javascript.js"></script>
     <script src="codemirror/mode/yaml/yaml.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
@@ -54,10 +64,9 @@
       <div class='output'>
 
         <!-- Tab links -->
-        <h1> Results Stdout: </h1>
-        <p>
+       <!--- <p>
           <% if(typeof ml_return!='undefined' ? ml_return : ''){ %><%= ml_return %><% } %>
-        </p>
+        </p>-->
         <textarea id="result" class="result" placeholder="Results go here..."><% if(typeof ml_return_formatted!='undefined' ? ml_return_formatted : ''){ %><%= ml_return_formatted %><% } %>
         </textarea>
 
