--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,7 +12,7 @@ body, html {
   transition: all 0.5s ease-in-out;
   background:#3d3d3a;
   color:#afafaf;
-  overflow-y:scroll;
+  overflow-y:hidden;
 }
 .container {
   height:100%;
@@ -24,10 +24,13 @@ form {
 }
 .input {
   flex-grow:1;
+  flex-wrap: nowrap;
 }
 .output {
+  margin: 1px;
   height:350px;
-  overflow-y:scroll;
+  overflow-y:hidden;
+  width: 100%;
 }
 .input-panels {
   width: 100%;
@@ -36,7 +39,7 @@ form {
 }
 .input-panels > div {
   margin:1px;
-  width: 49%;
+  width: 49.9%;
   float: left;
   height:100%;
 }
